tests/failing/invalid_literal.dodo
fn main() {
    let x: u32 = else;
}
